feat(next): Adds basic styling of elements and a grid to the single page

--- a/apps/next/src/styles.scss
+++ b/apps/next/src/styles.scss
@@ -1,4 +1,5 @@
 @import '~@dynatrace/fluid-design-tokens/global/theme';
+@import '~@dynatrace/fluid-design-tokens/global/typography';
 
 .fluid-theme--abyss {
   --body-background-color: var(--color-neutral-60);
@@ -31,12 +32,36 @@ html {
 }
 
 body {
+  @include fluid-dt-text();
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+h1 {
+  @include fluid-dt-h1();
+}
+
+h2 {
+  @include fluid-dt-h2();
+}
+
+h3 {
+  @include fluid-dt-h3();
+}
+
+h4 {
+  @include fluid-dt-h4();
+}
+
+h5 {
+  @include fluid-dt-h5();
+}
+
+h6  {
+  @include fluid-dt-h6();
 }
 
 h1,
@@ -52,6 +77,10 @@ p {
 
 a {
   text-decoration: none;
+}
+
+em {
+  @include fluid-dt-text-em();
 }
 
 button {
