--- a/apps/next/src/app/pages/single-page/single-page.scss
+++ b/apps/next/src/app/pages/single-page/single-page.scss
@@ -1,3 +1,9 @@
 :host {
   display: block;
 }
+
+.next-singlepage-grid {
+  display: grid;
+  grid-template-columns: 0.3fr 1fr 0.3fr;
+  grid-template-areas: 'nav main footer';
+}
