--- a/libs/fluid-elements/tab-group/src/lib/tab/tab.scss
+++ b/libs/fluid-elements/tab-group/src/lib/tab/tab.scss
@@ -18,13 +18,11 @@
 :host([disabled]) {
   pointer-events: none;
 
-  &:host .fluid-tab {
+  .fluid-tab {
     color: var(--color-neutral-80);
 
-    &:hover {
-      &::after {
-        background-color: none;
-      }
+    &:hover::after {
+      background-color: none;
     }
   }
 }
@@ -39,7 +37,6 @@
   cursor: pointer;
   display: inline-block;
   position: relative;
-  list-style-type: none;
   color: var(--color-neutral-100);
   white-space: unset;
 
@@ -50,17 +47,12 @@
     }
   }
 
-  &:disabled {
-    // color: var(--color-neutral-80);
-    color: red;
-  }
-
   &::after {
     position: absolute;
     width: 100%;
-    height: 2px;
+    height: $fluid-spacing--3x-small;
     background-color: transparent;
-    bottom: -2px;
+    bottom: -$fluid-spacing--3x-small;
     left: 0;
     content: '';
   }
@@ -69,10 +61,8 @@
 .fluid-state--active {
   color: var(--color-neutral-150);
 
-  &:hover {
-    &::after {
-      background-color: var(--color-primary-100);
-    }
+  &:hover::after {
+    background-color: var(--color-primary-100);
   }
 
   &::after {
