--- a/apps/next/src/app/pages/single-page/single-page.scss
+++ b/apps/next/src/app/pages/single-page/single-page.scss
@@ -2,7 +2,7 @@
   display: block;
 }
 
-.next-singlepage-grid {
+.next-single-page-grid {
   display: grid;
   grid-template-columns: 0.3fr 1fr 0.3fr;
   grid-template-areas: 'nav main footer';
